--- a/content_writing/content.html
+++ b/content_writing/content.html
@@ -86,11 +86,23 @@
 					</p>
 					<h6><a href="/content_writing/SOUS_CHEF.pdf" style="color: black">View Paper</a></h6><br>
 					<hr>
-					<h4><strong>Risk Assessment from StakeHolders Perspective<br>in Small Scale Construction Projects</a></strong></h4>
+					<h4><strong>Risk Assessment from StakeHolders Perspective<br>in Small Scale Construction Projects</a></strong>&nbsp;&nbsp; (Jan 2015 - March 2015)</h4>
                                         <p><strong>Abstract</strong></p>
                                         <p>This report uses a systematic and holistic approach to identify risks and investigate the probability of occurrence and impact levels of these risks. The report aims to identify and analyse the risks related with the development of construction projects from the perspectives of project stakeholders. Questionnaire surveys were used to collect the facts and data. Based on a comprehensive valuation of the possibility of occurrence and their impact levels on the project objectives using Shen’s mathematical formula for finding significant risk factor, software such as IBM SPSS Statistical Data Editor and IBM Sample Power 3 for analysing the vast data collected, this report identifies several major risk factors.
 					</p>
 					<h6><a href="/content_writing/UG_Project.pdf" style="color: black">View Paper</a></h6><br>
+					<hr>
+					<h4><strong>Wadala-Chembur Mono Rail Corridor - Detailed Project Report</a></strong>&nbsp;&nbsp; (May 2014 - July 2014)</h4>
+                                        <p><strong>Abstract</strong></p>
+                                        <p>The Mumbai monorail project is a 20KM long corridor which connects 17 stations between
+					   Chembur and Sant Gadge Maharaj Chowk. It will act as a feeder service to other transit system
+					and will cater to narrow and congested areas. Mumbai Metropoliton Region Development Authority (From now on will be referred to as
+					MMRDA) is the owner of the project and the contract has been granted to an consortium of
+					Larsen & Toubro(L&T) and Scomi Engineering, BHD. L&T is India’s leading engineering and construction company whereas The Scomi Group is a
+					global service provider based in Malaysia and is one of only two companies in the world to
+					provide monorail solutions. It has previously worked on the monorail in Kuala Lampur,Malaysia. The Louis Berger Group Inc. (LBG) is the project management consultant for the project.
+					</p>
+					<h6><a href="/content_writing/ROhan dasHH.pdf" style="color: black">View Paper</a></h6><br>
 									</div>
 								</div>
 							</div>
