--- a/cp/cp.html
+++ b/cp/cp.html
@@ -95,9 +95,10 @@
 							
                                        					 <h4><strong>Automated Feature Engineering using Libraries in Python</strong></h4>
 									<p>Kaggle (07/2018 – 07/2018)</br></p>
-                                                                                  <li>Completed the analysis of what sorts of people were likely to survive. 
-											      In particular, applied the tools of machine learning to predict which passengers survived the tragedy.</li>
-											  <li>Library Used: Feature Tools</li>
+			                                                                  <li>Typically, feature engineering is a drawn-out manual process, relying on domain knowledge, intuition, 
+											  and data manipulation. This process can be extremely tedious and the final features will be limited both by human subjectivity and time. 
+											  Automated feature engineering aims to help the data scientist by automatically creating many candidate features out of
+											  a dataset from which the best can be selected and used for training.</li>
 											  <li>The RMSE score on the validation set is 1701.42</li><br>
                                                                                       <img src="images/FE1.png"
 											   style= "width: 450px;
@@ -108,11 +109,11 @@
 		
                                       					 <h4><strong>Titanic: Machine Learning from Disaster</strong></h4>
 									<p>Kaggle (04/2018 – 4/2018)</br></p>
-                                                                                  <li>Typically, feature engineering is a drawn-out manual process, relying on domain knowledge, intuition, 
-											  and data manipulation. This process can be extremely tedious and the final features will be limited both by human subjectivity and time. 
-											  Automated feature engineering aims to help the data scientist by automatically creating many candidate features out of
-											  a dataset from which the best can be selected and used for training.</li>
-											  <li>Model Accuracy: 87.32</li><br>
+
+										      <li>Completed the analysis of what sorts of people were likely to survive. 
+											      In particular, applied the tools of machine learning to predict which passengers survived the tragedy.</li>
+										     <li>Classifier: Binary</li><br>  
+										     <li>Model Accuracy: 87.32</li><br>
                                                                                       <img src="images/Kaggle.PNG"
 											   style= "width: 450px;
 											   height: 450px;">
