--- a/cp/cp.html
+++ b/cp/cp.html
@@ -112,7 +112,7 @@
 
 										      <li>Completed the analysis of what sorts of people were likely to survive. 
 											      In particular, applied the tools of machine learning to predict which passengers survived the tragedy.</li>
-										     <li>Classifier: Binary</li><br>  
+										     <li>Classifier: Binary</li>  
 										     <li>Model Accuracy: 87.32</li><br>
                                                                                       <img src="images/Kaggle.PNG"
 											   style= "width: 450px;
