--- a/cp/cp.html
+++ b/cp/cp.html
@@ -89,6 +89,10 @@
                                                                                       <img src="images/Tableau.PNG"
 											   style= "width: 450px;
 											   height: 450px;">
+										&nbsp;
+                                                                                      <img src="images/Tableau1.PNG"
+											   style= "width: 450px;
+											   height: 450px;">
                                                                                    <br><br>
                                                                                       <h6><a href="https://public.tableau.com/profile/rohan.das#!/vizhome/FINALPRESENTATIONMONDAYFINAL/DATASOURCES" style="color: black">View Project</a></h6>
 											  <hr><br></br>
