--- a/cp/cp.html
+++ b/cp/cp.html
@@ -76,7 +76,7 @@
 									<div class="about-desc">
 										
 										<h2>Data Analytics Projects</h2>
-                                        <hr>
+                                        <hr style="height:1px" color="black">
                                         <h4><strong>Automated Data Scraping and Visualization Tool for Continental Automotive </strong></h4>
 									<p>UNC Charlotte (08/2018 – 12/2018)</br></p>
                                                                                   <li>Developed an automated tool for CONTINENTAL using Python and
@@ -127,7 +127,7 @@
 		
 								
 								<h2>Competitive Programming Profiles</h2>
-                                        <hr>
+                                        <hr style="height:1px" color="black">
                                         <h6><strong><a href="https://www.kaggle.com/rohandash" style="color: darkred">Kaggle</a></strong></h6><br>
                                         <h6><strong><a href="https://www.hackerearth.com/@rohandash06" style="color:dimgrey">HackerEarth</a></strong></h6><br>
                                         <h6><strong><a href="https://www.hackerrank.com/rohan_dash06" style="color:forestgreen">HackerRank</a></strong></h6>
