--- a/android-dev/android.html
+++ b/android-dev/android.html
@@ -76,7 +76,7 @@
 								<div class="col-md-12">
 									<div class="about-desc">
 										<h2>Mobile App Development.</h2>
-                                        <hr>
+                                        <hr style="height:1px" color="black">
  							<h4><strong>SOUS CHEF</strong></h4>
 									           <p>UNC Charlotte (08/2018 – 12/2018)</p>
                                                                                   <li>Developed prototypes of a co-creative mobile application to assist in cooking.</li> <li>Under took various User research & needfinding studies.</li> <li>Created Personas and defined Use Cases.</li>
