--- a/content_writing/content.html
+++ b/content_writing/content.html
@@ -78,7 +78,7 @@
 								<div class="col-md-12">
 									<div class="about-desc">
 										<h2>Academic Papers</h2>
-                                        <hr>
+                                        <hr style="height:1px" color="black">
                                         <h4><strong>SOUS: Co-Creative Cooking Application</strong> (Ongoing work) </h4>
                                         <p><strong>Abstract</strong></p>
                                         <p>We report a study in which thirteen users were asked to evaluate our prototype app in terms of interaction with the system, usability, novelty, and overall liking. The interview questions were evaluated using qualitative and mixed methods data analysis.
