--- a/opensource/opensource.html
+++ b/opensource/opensource.html
@@ -80,10 +80,16 @@
                                         <h4><strong>Chatbot Fundamentals</strong><i>&nbsp;(Ongoing)</i><br></h4>
 					<p>The objective is to help me think through the design and engineering challenges of a conversational UI.</p>
 					
-					<li>A simple chatbot that evaluates and responds to user input.</li>					
+					<li>Implemented smalltalk, ELIZA style</li>					
 					<li>With elements of personality and rule-based systems for parsing text.</li>
-					<li>Used machine learning to turn natural language into structured data using Python's spaCy, scikit-learn, and rasa NLU libraries.</li>
-					<br>
+					<li>Used machine learning to turn natural language into structured data using Python's RegEx, spaCy, scikit-learn, and rasa NLU libraries.</li>
+										<li>Key Features</li>
+										    <ul>
+      											<li>Query a database</li>
+      											<li>Plan a trip</li>
+      											<li>Help User order coffee</li>
+    										    </ul>
+										<br>
 										
 					<img src="images/Prot.PNG"			
 					     style= "width: 350px;
