--- a/opensource/opensource.html
+++ b/opensource/opensource.html
@@ -79,16 +79,16 @@
 					<hr style="height:1px" color="black">
                                         <h4><strong>Chatbot Fundamentals</strong><i>&nbsp;(Ongoing)</i><br></h4>
 					<p>The objective is to help me think through the design and engineering challenges of a conversational UI.</p>
-					
-					<li>Implemented smalltalk, ELIZA style</li>					
-					<li>With elements of personality and rule-based systems for parsing text.</li>
-					<li>Used machine learning to turn natural language into structured data using Python's RegEx, spaCy, scikit-learn, and rasa NLU libraries.</li>
 										<li>Key Features</li>
 										    <ul>
       											<li>Query a database</li>
       											<li>Plan a trip</li>
       											<li>Help User order coffee</li>
     										    </ul>
+					<li>Implemented smalltalk, ELIZA style.</li>					
+					<li>With elements of personality and rule-based systems for parsing text.</li>
+					<li>Used machine learning to turn natural language into structured data using Python's RegEx, spaCy, scikit-learn, and rasa NLU libraries.</li>
+
 										<br>
 										
 					<img src="images/Prot.PNG"			
