--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										<h2>Who Am I ?</h2>
                                         <hr>
                                         
-                                        <p1>Graduate Student with over two years of professional experience in data warehousing, business intelligence and UI/UX Design seeking an opportunity with an innovative organization. Proven ability to understand user requirements and translate into actionable project plans.</p1>
+                                        <p1>Graduate Student with over two years of professional experience in Data Warehousing, ETL Development, Business Intelligence and UI/UX Design seeking an opportunity with an innovative organization. Proven ability to understand user/business requirements and translate into actionable project plans.</p1>
                                         <p2><br><br><b><center>Adaptable. Resourceful. Inquisitive.</center></b></br></br></p2>
                           
 									</div>
@@ -175,7 +175,7 @@
 							<div class="progress-wrap">
 								<h3>JavaScript/React.js/Node.js</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="75"
+								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="75"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
 								    <span>75%</span>
 								  	</div>
@@ -186,7 +186,7 @@
 							<div class="progress-wrap">
 								<h3>Design/Wireframing/RapidPrototyping</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
+								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="90"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
 								    <span>90%</span>
 								  	</div>
@@ -195,9 +195,9 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>SketchApp/AdobeXD</h3>
+								<h3>SketchApp/AdobeXD/MarvelApp</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
+								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="90"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
 								    <span>90%</span>
 								  	</div>
@@ -206,9 +206,9 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>SQL Server/MySQL/Oracle/MongoDB</h3>
+								<h3>MySQL/SQL Server/Oracle/MongoDB</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="80"
+								 	<div class="progress-bar color-7" role="progressbar" aria-valuenow="80"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
 								    <span>80%</span>
 								  	</div>
@@ -217,9 +217,9 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>ETL/Informatica/Microsoft SSIS</h3>
+								<h3>ETL/Informatica/Ms SSIS/Talend/Alteryx</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="70"
+								 	<div class="progress-bar color-8" role="progressbar" aria-valuenow="70"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
 								    <span>70%</span>
 								  	</div>
@@ -230,7 +230,7 @@
 							<div class="progress-wrap">
 								<h3>Project Management/Git/JIRA</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-7" role="progressbar" aria-valuenow="90"
+								 	<div class="progress-bar color-9" role="progressbar" aria-valuenow="90"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
 								    <span>90%</span>
 								  	</div>
@@ -239,9 +239,9 @@
 						</div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>R/VBA</h3>
+								<h3>R/VBA/Unix</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-8" role="progressbar" aria-valuenow="75"
+								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
 								    <span>75%</span>
 								  	</div>
@@ -252,7 +252,7 @@
 							<div class="progress-wrap">
 								<h3>C++/Java</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-8" role="progressbar" aria-valuenow="35"
+								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="35"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:35%">
 								    <span>35%</span>
 								  	</div>
@@ -263,7 +263,7 @@
 							<div class="progress-wrap">
 								<h3>Agile & Scrum Methodologies</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-9" role="progressbar" aria-valuenow="95"
+								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="95"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
 								    <span>95%</span>
 								  	</div>
