--- a/test102/index.html
+++ b/test102/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <meta property="og:site_name" content="UX and Interaction design portfolio of Rachit Gupta"/>
-  <meta property="og:title" content="Rachit Gupta"/>
+  <meta property="og:site_name" content="UX and Interaction design portfolio of Rohan Das"/>
+  <meta property="og:title" content="Rphan Das"/>
   <meta property="og:image" content="img/ticketpass_thumb.png"/>
   <meta property="og:type" content="portfolio"/>
 
   <link rel="icon" href="img/logo.png">
-  <title>Rachit Gupta</title>
+  <title>Rohan Das</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -41,13 +41,13 @@
         
         <div class="intro hide-on-med-and-up">
           <a href="#"><img src="img/logo.svg" id="logo"></a>
-          <h4>Rachit Gupta</h4>
-          <h5 style="font-weight:400;">UX Designer</h5><br><br>
+          <h4>Rohan Das</h4>
+          <h5 style="font-weight:400;">Graduate Student</h5><br><br>
           
           <a href="#" id="work-chip">
             <div class="chip">Work</div>
           </a>
-          <a href="https://medium.com/@rachitgupta" target="_blank">
+          <a href="" target="_blank">
             <div class="chip">Writing</div>
           </a>
           <a href="about.html" target="_blank">
@@ -262,7 +262,7 @@
 
     <ul class="social-icons">
       <li><a href="https://www.linkedin.com/in/rachit91" target="_blank" class="social-icon" style="color:#212121;"> <i class="fa fa-linkedin"></i></a></li>
-      <li><a href="mailto:rachitgupta75@gmail.com?Subject=Hello" target="_top" class="social-icon" style="color:#212121;"> <i class="fa fa-envelope-o"></i></a></li>
+      <li><a href="mailto:rohan.dash0604@gmail.com"?Subject="Hello" target="_top" class="social-icon" style="color:#212121;"> <i class="fa fa-envelope-o"></i></a></li>
       <!-- <li><a href="https://www.instagram.com/hidden.madness/" target="_blank" class="social-icon" style="color:#212121;"> <i class="fa fa-instagram"></i></a></li> -->
       <li><a href="resume.pdf" target="_blank" class="social-icon"> <i class="fa fa-file-pdf-o" aria-hidden="true" style="color:#161616"></i> <span style="color:#161616"> Resume</span></a></li>
     </ul>
