--- a/test102/index.html
+++ b/test102/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
   <meta property="og:site_name" content="UX and Interaction design portfolio of Rohan Das"/>
-  <meta property="og:title" content="Rphan Das"/>
+  <meta property="og:title" content="Rohan Das"/>
   <meta property="og:image" content="img/ticketpass_thumb.png"/>
   <meta property="og:type" content="portfolio"/>
 
@@ -220,7 +220,8 @@
     <blockquote><p class="left-align xxx-large-text">Let's build great products <a href="" class="link-color drift-open-chat">together.</a></p></blockquote>
 
     <!-- place this script tag after the Drift embed tag -->
-    <script>
+ <!-- 
+    <script> 
       (function() {
        var DRIFT_CHAT_SELECTOR = '.drift-open-chat'
 
@@ -256,7 +257,8 @@
        });
        });
       })();
-    </script>
+    </script> 
+-->
 
     <div class="x-small-spacer"></div>
 
