--- a/test102/index.html
+++ b/test102/index.html
@@ -202,11 +202,11 @@
 
     <blockquote><p class="left-align xxx-large-text">
 
-      On the side, I manage a <a href="https://medium.com/designer-recipes" target="_blank"> design publication </a> with a goal of documenting exploratory projects and inspiring young designers to express.
+      On the side, I manage a <a href="" target="_blank"> design publication </a> with a goal of documenting exploratory projects and inspiring young designers to express.
 
       <br><br>
     
-      Some of the projects include: building <a href="https://rachit91.github.io/swimad/index.html" target="_blank">a website to help people learn swimming</a>, a <a href="https://medium.com/designer-recipes/chatbots-my-first-one-yeah-its-dumb-304b7ead48f" target="_blank">chatbot</a> for my pet fish and a website to help <a href="projects/mncnc.html" target="_blank">children get connected with nature</a>.
+      Some of the projects include: building <a href="htps://rachit91.github.io/swimad/index.html" target="_blank">a website to help people learn swimming</a>, a <a href="https://medium.com/designer-recipes/chatbots-my-first-one-yeah-its-dumb-304b7ead48f" target="_blank">chatbot</a> for my pet fish and a website to help <a href="projects/mncnc.html" target="_blank">children get connected with nature</a>.
 
     </p></blockquote>
 
@@ -263,7 +263,7 @@
     <div class="x-small-spacer"></div>
 
     <ul class="social-icons">
-      <li><a href="https://www.linkedin.com/in/rachit91" target="_blank" class="social-icon" style="color:#212121;"> <i class="fa fa-linkedin"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/rohan-das-50a780100/" target="_blank" class="social-icon" style="color:#212121;"> <i class="fa fa-linkedin"></i></a></li>
       <li><a href="mailto:rohan.dash0604@gmail.com"?Subject="Hello" target="_top" class="social-icon" style="color:#212121;"> <i class="fa fa-envelope-o"></i></a></li>
       <!-- <li><a href="https://www.instagram.com/hidden.madness/" target="_blank" class="social-icon" style="color:#212121;"> <i class="fa fa-instagram"></i></a></li> -->
       <li><a href="resume.pdf" target="_blank" class="social-icon"> <i class="fa fa-file-pdf-o" aria-hidden="true" style="color:#161616"></i> <span style="color:#161616"> Resume</span></a></li>
