--- a/test102/index.html
+++ b/test102/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="css/jquery.fbmessenger.css">
 
   <!-- JS for Drift and Google analytics-->
-  <script src="js/drift.js"></script>
+ <!-- <script src="js/drift.js"></script> -->
   <script src="js/analytics.js"></script>
 </head>
 <body>
