--- a/test102/index.html
+++ b/test102/index.html
@@ -66,9 +66,9 @@
   <div class="spacer" id="scroll-to-work"></div>
 
   <div class="container">
+                                        <p2><br><br><b><center>Adaptable. Resourceful. Inquisitive.</center></b></br></br></p2>
 
-
-    <blockquote><p class="left-align xxx-large-text">I'm inspired by human behavior and curiosity. From enterprise to retail, I have in-depth experience in creating delightful and visual products.</p></blockquote>
+    <blockquote><p class="left-align xxx-large-text">Graduate Student with over two years of professional experience in Data Warehousing, ETL Development, Business Intelligence and UI/UX Design seeking an opportunity with an innovative organization. Proven ability to understand user/business requirements and translate into actionable project plans.</p></blockquote>
 
     <!-- spacer -->
     <div class="spacer"></div>
