--- a/test102/index.html
+++ b/test102/index.html
@@ -21,6 +21,9 @@
   <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/csshake/1.5.1/csshake-default.css" type="text/css" rel="stylesheet" media="screen,projection"/> -->
   <link rel="stylesheet" href="css/jquery.fbmessenger.css">
 
+		<!-- MAIN JS -->
+	<script src="js/main.js"></script>
+	
   <!-- JS for Drift and Google analytics-->
  <!-- <script src="js/drift.js"></script> -->
   <script src="js/analytics.js"></script>
