--- a/test102/index.html
+++ b/test102/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <meta property="og:site_name" content="UX and Interaction design portfolio of Rohan Das"/>
+  <meta property="og:site_name" content="UX and Interaction Design portfolio of Rohan Das"/>
   <meta property="og:title" content="Rohan Das"/>
   <meta property="og:image" content="img/ticketpass_thumb.png"/>
   <meta property="og:type" content="portfolio"/>
@@ -74,7 +74,7 @@
   <div class="spacer" id="scroll-to-work"></div>
 
   <div class="container">
-                                        <p2><br><br><b><center>Adaptable. Resourceful. Inquisitive.</center></b></br></br></p2>
+                                        <br><br><b><center>Adaptable. Resourceful. Inquisitive.</center></b></br></br>
 
     <blockquote><p class="left-align xxx-large-text">Graduate Student with over two years of professional experience in Data Warehousing, ETL Development, Business Intelligence and UI/UX Design seeking an opportunity with an innovative organization. Proven ability to understand user/business requirements and translate into actionable project plans.</p></blockquote>
 
@@ -104,7 +104,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>Python/NumPy/Pandas/Django/Tensorflow/OpenCV</h3>
+								<h3>Python/NumPy/Pandas/Django</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="75"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
@@ -170,7 +170,7 @@
 						</div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>Project Management/Git/JIRA</h3>
+								<h3>Project Management/Git/JIRA/Slack</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="90"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -181,7 +181,7 @@
 						</div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>R/VBA/Unix</h3>
+								<h3>R/VBA/Power Shell</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
@@ -254,7 +254,7 @@
     <div class="spacer"></div>
 
     <!-- Section heading -->
-    <div class=""><h4 style="font-weight:500;">Work</h4><hr class="underline left"></div>
+    <div class=""><h2 style="font-weight:500;">Work</h2><hr class="underline left"></div>
 
     <!-- spacer -->
     <div class="small-spacer"></div>
