--- a/index.html
+++ b/index.html
@@ -80,17 +80,22 @@
 										<h2>Who Am I ?</h2>
                                         <hr>
                                         
-                                        <p1>Graduate Student with over two years of professional experience in Data Warehousing, ETL Development, Business Intelligence and UI/UX Design seeking an opportunity with an innovative organization. Proven ability to understand user/business requirements and translate into actionable project plans.</p1>
+                                        <p1>Graduate Student with over two years of professional experience in Information Sciences and UI/UX Design seeking an opportunity with an innovative organization. Proven ability to understand user/business requirements and translate into actionable project plans.</p1>
                                         <p2><br><br><b><center>Adaptable. Resourceful. Inquisitive.</center></b></br></br></p2>
                           
 									</div>
 								</div>
 							</div>
 							<div class="row">
+									<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+									<a href="cp/cp.html" target="_blank"><div class="services color-1">
+										<span class="icon2"><i class="icon-bulb"></i></span>
+										<h3>Data<br>Analysis</h3>
+									</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<a href="test102/index.html" target="_blank"><div class="services color-1">
 										<span class="icon2"><i class="icon-bulb"></i></span>
-										<h3>Data<br>Analysis</h3>
+										<h3>On-going Work</h3>
 									</div>
 								</a></div>
  									<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
