--- a/test102/index.html
+++ b/test102/index.html
@@ -74,7 +74,7 @@
   <div class="spacer" id="scroll-to-work"></div>
 
   <div class="container">
-                                        <h2><br><br><b><center>Adaptable. Resourceful. Inquisitive.</center></b></br></br></h2>
+                                        <h2><br><b><center>Adaptable. Resourceful. Inquisitive.</center></br></br></h2>
 
     <blockquote><p class="left-align xxx-large-text">Graduate Student with over two years of professional experience in Information Sciences and UI/UX Design seeking an opportunity with an innovative organization. Proven ability to understand user/business requirements and translate into actionable project plans.</p></blockquote>
 
