--- a/test102/index.html
+++ b/test102/index.html
@@ -76,7 +76,7 @@
   <div class="container">
                                         <h2><br><b><center>Adaptable. Resourceful. Inquisitive.</center></br></br></h2>
 
-    <blockquote><p class="left-align xxx-medium-text">Graduate Student with over two years of professional experience in Information Sciences and UI/UX Design seeking an opportunity with an innovative organization. Proven ability to understand user/business requirements and translate into actionable project plans.</p></blockquote>
+    <p class="left-align xxx-medium-text">Graduate Student with over two years of professional experience in Information Sciences and UI/UX Design seeking an opportunity with an innovative organization. Proven ability to understand user/business requirements and translate into actionable project plans.</p>
 
     <!-- spacer -->
     <div class="spacer"></div>
