--- a/test102/index.html
+++ b/test102/index.html
@@ -76,7 +76,7 @@
   <div class="container">
                                         <h2><br><b><center>Adaptable. Resourceful. Inquisitive.</center></br></br></h2>
 
-    <h3><p class="left-align xxx-medium-text">Graduate Student with over two years of professional experience in Information Sciences and UI/UX Design seeking an opportunity with an innovative organization. Proven ability to understand user/business requirements and translate into actionable project plans.</p></h3>
+    <h3><p class="left-align xxx-medium-text">Graduate Student with over two years of professional experience in Information Sciences and UI/UX Design seeking an opportunity with an innovative organization.</p></h3>
 
     <!-- spacer -->
     <div class="spacer"></div>
@@ -354,15 +354,15 @@
     <div class="spacer"></div>
     <div class="spacer" id="scroll-to-about"></div>
 
-    <blockquote><p class="left-align xxx-large-text">
+    <h3><p class="left-align xxx-large-text">
 
       Design is a bridge between what is, and what could be.
 
       <br><br>
 
-      Over the years, I have identified a passion for bringing explorations to life. I enjoy storytelling and expressing ideas visually.
+      A data driven Designer with proven ability to understand user/business requirements and translate into actionable project plans.
 
-    </p></blockquote>
+	  </p></h3>
     
     <div class="spacer"></div>
     <div class="small-spacer"></div>
